[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Levels/LevelBuilder.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sounds/Ambient/whispers.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/Ambient/main_theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://scripts/WorldEnvironment.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/ambient_ghost.ogg" type="AudioStream" id=6]
[ext_resource path="res://enviroments/DarkEnv.tres" type="Environment" id=7]
[ext_resource path="res://assets/sounds/horror_soundtrack.ogg" type="AudioStream" id=29]
[ext_resource path="res://scenes/Level.gd" type="Script" id=32]

[node name="Root" type="Spatial"]
script = ExtResource( 32 )

[node name="LevelBuilder" parent="." instance=ExtResource( 1 )]
X_SECTIONS = 3
Z_SECTIONS = 3
ENEMY_PROB = 0.5
ITEM_PROB = 0.9

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -17.957
autoplay = true

[node name="WindFear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="Whispers" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -33.681

[node name="SoundTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.223
autoplay = true

[node name="WindTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="WhisperTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )
script = ExtResource( 4 )

[connection signal="timeout" from="WindTimer" to="." method="_on_WindTimer_timeout"]
[connection signal="timeout" from="WhisperTimer" to="." method="_on_WhisperTimer_timeout"]
